--- a/ControlAutomatizado/src/ec/edu/ups/vista/Inicio1A.form
+++ b/ControlAutomatizado/src/ec/edu/ups/vista/Inicio1A.form
@@ -53,7 +53,7 @@
         <Menu class="javax.swing.JMenu" name="fileMenu">
           <Properties>
             <Property name="mnemonic" type="int" value="102"/>
-            <Property name="text" type="java.lang.String" value="Empreados"/>
+            <Property name="text" type="java.lang.String" value="Empleados"/>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="saveAsMenuItem">
