--- a/ControlAutomatizado/src/ec/edu/ups/vista/VentanaProveedor.form
+++ b/ControlAutomatizado/src/ec/edu/ups/vista/VentanaProveedor.form
@@ -99,10 +99,12 @@
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Component id="jLabel7" pref="93" max="32767" attributes="0"/>
                                               <Group type="102" attributes="0">
-                                                  <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
+                                                  <Group type="103" groupAlignment="0" attributes="0">
+                                                      <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
+                                                      <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
+                                                  </Group>
                                                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                               </Group>
-                                              <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
                                           </Group>
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Group type="102" alignment="1" attributes="0">
@@ -440,8 +442,8 @@
                     <Column editable="false" title="Apellido" type="java.lang.Object"/>
                     <Column editable="false" title="Cedula" type="java.lang.Object"/>
                     <Column editable="false" title="Direccion" type="java.lang.Object"/>
-                    <Column editable="false" title="Telefono" type="java.lang.Object"/>
                     <Column editable="false" title="Correo Electronico" type="java.lang.Object"/>
+                    <Column editable="false" title="Telefono" type="java.lang.Object"/>
                     <Column editable="false" title="G&#xe9;nero" type="java.lang.Object"/>
                     <Column editable="true" title="Empresa" type="java.lang.Object"/>
                   </Table>
